# Solux

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/model-orchestrator/: .gitignore  README.md  pyproject.toml
apps/model-orchestrator/app/: __init__.py  main.py
apps/model-orchestrator/app/api/: feedback.py  infer.py  route.py
apps/model-orchestrator/app/core/: __init__.py  disk.py  gpu_locks.py  latency_budget.py  licenses.py  mojo_runtime.py  router.py
apps/model-orchestrator/app/harnesses/: base_harness.py  benchmark_harness.py  embedding_harness.py
apps/model-orchestrator/app/learning/: feedback_store.py
apps/model-orchestrator/app/pipelines/: candidate_reranking.py  eo_embedding.py  fatal_flaw_screening.py  rooftop_panel_detection.py
apps/model-orchestrator/app/providers/: dofa_embeddings.py  geobase_onnx.py  max_local_critic.py  microsoft_grw.py  prithvi_embeddings.py  satlas_embeddings.py  terramind_embeddings.py
apps/model-orchestrator/app/routes/: inference.py
apps/model-orchestrator/app/utils/: geojson.py  output_writer.py  tiling.py
apps/model-orchestrator/modular/: build-kernels.sh  max_client.py  serve-local-critic.sh
apps/model-orchestrator/modular/kernels/: solux_kernels.mojo
apps/model-orchestrator/ops/model-cache/: download-models.sh  (+2 more)
apps/model-orchestrator/scripts/: setup-modular.sh  stop-max-critic.sh
apps/model-orchestrator/tests/: test_api_contracts.py  test_gpu_scheduler.py  test_mojo_kernels.py
(+337 files in other folders)
