[project]
name = "solux-model-orchestrator"
version = "0.2.0"
description = "Solux geospatial/solar model orchestration with MAX critic and continual learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
geo = [
    "rasterio>=1.4.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
]
ml = [
    "torch>=2.4.0",
    "onnxruntime-gpu>=1.19.0; platform_system=='Linux'",
    "onnxruntime>=1.19.0; platform_system!='Linux'",
    "transformers>=4.46.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
all = [
    "solux-model-orchestrator[geo,ml,dev]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
